# virtual-meet

./: .editorconfig  .eslintrc.cjs  .gitignore  .npmrc  001-project-setup.md  002-rust-core-workspace.md  003-video-playback-loop.md  011-simple-scripting-engine.md  AUDIO_PIPELINE_IMPLEMENTATION.md  CLAUDE.md  Cargo.toml  DEVICE_ENUMERATION_IMPLEMENTATION.md  LICENSE  README-PNPM.md  README.md  SETUP_REVIEW.md  TAURI_V2_MIGRATION.md  VIDEO_PIPELINE_IMPLEMENTATION.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  todo.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: README.md
.github/workflows/: build-deploy.yml  ci.yml  maintenance.yml  release.yml
docs/: 004-audio-playback-loop.md  005-combined-recording-pipeline.md  005-virtual-webcam-output.md  006-virtual-microphone-output.md  007-combined-recording.md  008-media-library-thumbnails.md  009-fast-switch-ux.md  010-hotkey-trigger-system.md  012-settings-panel.md  DEVELOPMENT_SETUP.md  architecture.md  kanban-board.md  requirements.md  task-categories.md  todo.md
examples/: combined_recording_example.rs
plans/260320-1655-fix-core-features/: phase-01-audio-playback.md  phase-02-video-streaming.md  phase-03-frontend-wiring.md  plan.md
plans/reports/: debugger-260321-1503-audio-streaming-bugs.md  fullstack-developer-260320-2013-imf-virtual-camera.md  planner-260320-1655-fix-core-features.md  researcher-260320-1956-imf-virtual-camera.md  researcher-260320-2008-imf-implementation-details.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: audio.rs  audio_decoder.rs  audio_processor.rs  commands.rs  commands_hotkeys.rs  commands_json_dsl.rs  commands_media.rs  commands_recording.rs  commands_scripting.rs  commands_settings.rs  commands_setup.rs  devices.rs  hotkeys.rs  json_dsl.rs  json_dsl_integration.rs  lib.rs  main.rs  media.rs  media_library.rs  media_scanner.rs  metadata_extractor.rs  scripting.rs  thumbnail_generator.rs
src-tauri/src/commands/: virtual_devices.rs
src-tauri/src/devices/: audio.rs  capabilities.rs  video.rs
src-tauri/src/recording/: av_sync.rs  combined_recorder.rs  config.rs  mod.rs  mp4_muxer.rs
src-tauri/src/virtual/: media_router.rs  microphone.rs  mod.rs  tests.rs  webcam.rs
src-tauri/src/virtual_device/: imf_webcam.rs  media_router.rs  microphone.rs  mod.rs  shared_frame_buffer.rs  tests.rs  webcam.rs
src/components/: Dashboard.tsx  EnhancedMediaLibrary.tsx  HotkeyManager.tsx  MediaLibrary.tsx  Recording.tsx  Settings.tsx  setup-panel.tsx
src/components/__tests__/: Button.test.tsx
src/test/: setup.ts  utils.tsx
src/types/: index.ts
vcam-source/: Cargo.toml
vcam-source/examples/: test_vcam.rs
vcam-source/src/: com_server.rs  frame_reader.rs  lib.rs  media_source.rs  media_stream.rs
