[workspace]
members = [
    "src-tauri",
    "vcam-source",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VirtualMeet Contributors"]
license = "MIT"

[workspace.dependencies]
tauri = { version = "2.0", features = ["rustls-tls"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Media processing
rodio = "0.17"

# Windows-specific
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_MediaFoundation",
    "Win32_Media_KernelStreaming",
    "Win32_System_Memory",
    "Win32_Security",
    "implement",
] }

# Virtual Audio
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "wav", "isomp4"] }

# Virtual Video
image = "0.24"

# Scripting
rhai = { version = "1.16", features = ["sync"] }

# Hotkeys
global-hotkey = "0.5"
