[package]
name = "virtualmeet"
version = "0.1.0"
description = "Virtual presence desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Media processing
ffmpeg-next = { workspace = true }
rodio = { workspace = true }

# Windows-specific
windows = { workspace = true }

# Virtual Audio
cpal = { workspace = true }
symphonia = { workspace = true }

# Virtual Video
windows-capture = { workspace = true }
image = { workspace = true }

# Scripting
rhai = { workspace = true }

# Hotkeys
global-hotkey = { workspace = true }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
