[package]
name = "vcam-source"
version = "0.1.0"
edition = "2021"
description = "COM DLL media source for VirtualMeet IMFVirtualCamera"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_Media_MediaFoundation",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Security",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Graphics_Gdi",
    "implement",
] }
windows-core = "0.52"
